Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25407

Using remote control function to control Qt Assistant, help window does not activate

XMLWordPrintable

    • 5.0: 883147fdaeeb2effbdb8a93a48f1ced49d56693e, 4.8: 7d94d08f91004e4c48904ca192c16c2c4cc129d0

      When controlling Qt Assistant remotely, help window does not raise and activate.
      This is caused by a bug in Qt assistant where remote commands are being handled.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes