Fixed window raise issue when handling remote commands

Fixed remote command hanling in Qt Assistant. Now Qt Assistant tries to
raise and activate main help window after processing the remote command.

Task-number: QTBUG-25407
Change-Id: I6408b9795bdf21bb920830608ba23bfda7d41604
Reviewed-by: Karsten Heimrich <karsten.heimrich@nokia.com>
(cherry picked from qttools/883147fdaeeb2effbdb8a93a48f1ced49d56693e)
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>